--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,31 @@
-/* -- Navbar -- */
+/* -------------------- 
+    GLOBAL STYLES 
+-------------------- */
 
-/*.navbar{
-    margin-bottom: 0px;
+h1,h2,h3,h4,h5,h6{
+    font-family: "Exo 2", sans-serif;
 }
 
-.navbar-brand{
-    padding: 0px;
-}
+h2{font-size: 20px;}
+h3{font-size: 14px;}
+h4{font-size: 12px;}
 
-.logo{
-    margin: 10px 0px 0px 5px;
-    max-width: 70%;
+@media (min-width: 768px){
+    h2{font-size: 24px;}
+    h3{font-size: 18px;}
+    h4{font-size: 16px;}
 }
-
-.navbar-nav{
-    text-align: right;
+@media (min-width: 992px){
+    h2{font-size: 30px;}
+    h3{font-size: 24px;}
+    h4{font-size: 18px;}
 }
+  
+/* ----------- 
+    NAVBAR 
+------------ */
 
-#nav-links{
-    background-color: #3e3e3e;
-    margin-left: 50%;
-}
-
-#nav-links li a:hover,
-#nav-links li a:focus{
-    background-color: transparent;
-}
-
-.navbar-collapse a{
-    color: #fff;
-}
-
-.nav-border-right{
-    border-right: 0px;
-}
-
-.navbar-toggle{
-    background-color: #3e3e3e;
-    border-radius: 0px;
-}
-
-.icon-bar{
-    background-color: #fff;   
-}*/
+/* For screens less than 992px: */
 
 .navbar-brand,
 .navbar-nav li,
@@ -52,17 +35,25 @@
     padding-top: 0;
 }
 
-.navbar-nav{
-    margin-top: -7.5px;
+.navbar-header{
+    background-color: #fff;   
 }
 
 .navbar-collapse{
     border-top: none;
 }
 
+.container>.navbar-collapse{
+    background-color: transparent;
+}
+
 .navbar-brand img{
     height: 25px;
     margin-top: 12.5px;
+}
+
+.navbar-nav{
+    margin-top: -7.5px;
 }
 
 .navbar a{
@@ -89,51 +80,25 @@
     margin-left: 50%;
 }
 
-@media (min-width: 768px){   
-    /*.navbar{
-        min-height: 60px;
-    }
-    
-    .logo{
-        margin: 0px 0px;
-        max-width: 100%;
-    }
-    
-    .navbar-header,
-    #nav-links{
-        padding-top: 0px;
-    }
-    
-    #nav-links{
-        background-color: #fff;
-        margin-left: 0px;
-    }
-    
-    #nav-links li{
-        height: 22px;    
-    }
-    
-    #nav-links button{
-        margin-top: -6px;
-        margin-left: -15px;
-    }
-    
-    .nav>li>a{
-        display: inline;
-        padding: 0px 15px;
-    }
-    
-    */
+/* Media queries for screens larger than 992px: */
+
+@media (min-width: 992px){   
     .navbar-brand,
     .navbar-nav li,
     .navbar-nav li a{
-        line-height: 60px;
-        height: 60px;
+        line-height: 65px;
+        height: 65px;
         padding-top: 0;
     }
     
-    .navbar-brand{
+    .navbar-nav{
+        margin-top: 10px;
+        margin-left: auto;
+    }
+    
+    .navbar-brand img{
         margin-top: 15px;
+        height: 45px;
     }
      
     .navbar a{
@@ -149,19 +114,65 @@
     }
 }
 
-/* -- Header -- */
+/* ------------
+    HEADER
+------------ */
+
+/* For screens less than 992px: */
 
 .header{
     background-color: #8eb4e3;
     text-align: center;
     color: #fff;
-    font-family: "Exo 2", sans-serif;
     padding-bottom: 40px;
     margin-top: 50px;
 }
 
-@media (min-width: 768px){
+.header h4{
+    margin-top: 20px;
+}
+/* Media queries for screens larger than 992px: */
+
+@media (min-width: 992px){
     .header{
-        margin-top: 60px;
+        margin-top: 75px;
     }
+}
+
+/* ------------
+    Content
+------------ */
+
+/* For screens less than 768px: */
+
+
+.content h3{
+    color: #8eb4e3;
+}
+
+.content img{
+    margin: 25px 0px;
+}
+
+/* Media queries for screens larger than 768px: */
+
+
+/* Media queries for screens larger than 992px: */
+
+
+/* ------------
+    Marketing
+------------ */
+
+/* For screens less than 992px: */
+
+.marketing img{
+        margin-left: auto;
+        margin-right: auto;
+}
+
+/* Media queries for screens larger than 768px: */
+
+@media (min-width: 992px){
+    
 }
