--- a/assets/includes/scripts.html
+++ b/assets/includes/scripts.html
@@ -1,4 +1,4 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="./assets/jquery/jquery-1.11.1.min.js"></script>
         <!-- Bootstrap JS -->
         <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
