Changed directory structure (Final final draft)

--- a/resources/includes/navbar.html
+++ b/resources/includes/navbar.html
@@ -12,7 +12,7 @@
                     
                     <!-- Navbar Logo image -->
                     <a class="navbar-brand" href="./index.php">
-                        <img alt="ACME Logo" class="logo img-responsive" src="./img/logo.png"> <!-- Image responsive class used to facilitate proportional resizing using media queries with .navbar-brand img -->
+                        <img alt="ACME Logo" class="logo img-responsive" src="./resources/img/logo.png"> <!-- Image responsive class used to facilitate proportional resizing using media queries with .navbar-brand img -->
                     </a>
                 </div><!-- End navbar header -->
                 
