--- a/resources/includes/content.html
+++ b/resources/includes/content.html
@@ -9,11 +9,11 @@
                     <h3>Far far away, behind the word mountains</h3>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
-                            <img alt="Product Photo" class="img-responsive" src="./img/stock-photo.png">
+                            <img alt="Product Photo" class="img-responsive" src="./resources/img/stock-photo.png">
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <p class="text-justify">
-                                    <?php include('./assets/includes/sample-long.html') ?>
+                                    <?php include('./resources/includes/sample-long.html') ?>
                             </p>
                             <a href="#">
                                 <button type="button" class="btn btn-success">Know more</button>
@@ -30,11 +30,11 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="media">
                                 <a class="media-left" href="#">
-                                    <img src="./img/john-penn.png" alt="John Penn">
+                                    <img src="./resources/img/john-penn.png" alt="John Penn">
                                 </a>
                                 <div class="media-body">
                                     <h3>John Penn</h3>
-                                    <?php include('./assets/includes/sample-short.html') ?>
+                                    <?php include('./resources/includes/sample-short.html') ?>
                                 </div>
                             </div>
                             <a class="pull-right" href="#">Read More</a>
@@ -42,11 +42,11 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="media">
                                 <a class="media-left" href="#">
-                                    <img src="./img/mark-smith.png" alt="Mark Smith">
+                                    <img src="./resources/img/mark-smith.png" alt="Mark Smith">
                                 </a>
                                 <div class="media-body">
                                     <h3>Mark Smith</h3>
-                                    <?php include('./assets/includes/sample-short.html') ?>
+                                    <?php include('./resources/includes/sample-short.html') ?>
                                 </div>
                             </div>
                             <a class="pull-right" href="#">Read More</a>
