--- a/resources/includes/head.html
+++ b/resources/includes/head.html
@@ -9,10 +9,10 @@
         <title>Acme</title>
 
         <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
         
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./resources/css/style.css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
